# context

./: .c5tignore  .gitignore  .laio.yaml  .laio.yaml.example  AGENTS.md  CHANGELOG.md  CONTEXT_SESSION_NOTE.md  Cargo.toml  LICENSE  README.md  TESTING.md  Trunk.toml  build.rs  fix_note.py  fix_repo.py  flake.nix  index.html  input.css  inspect_ast.rs  lefthook.yml  prek.toml  style.css  tailwind.config.js  test_calls.rs  verify_uses_edges.sh
.github/workflows/: ci.yaml  container-build.yaml  release.yaml  update-flake-lock.yaml
Formula/: context.rb
data/: aarch64-darwin.json  aarch64-linux.json  x86_64-darwin.json  x86_64-linux.json
data/sql/sqlite/: 0002_add_projects.sql
docs/: a6s-nushell.md  api.md  code-analysis.md  development.md  frontend.md  mcp.md  schema.md  sync.md  testing.md  thaw-integration.md  user-guide.md
nix/: ci.nix  container.nix  dev.nix  devenv.nix  git-minimal.nix  packaging.nix  wasm-bindgen-cli.nix
queries/rust/: calls.scm  symbols.scm
scripts/: migrate_c5t_data.nu
skills/code-graph-query/: SKILL.md
skills/context/: SKILL.md
src/: lib.rs  serde_utils.rs
src/a6s/: error.rs  mod.rs  pipeline.rs  pipeline_test.rs  queries.rs  queries_test.rs  registry.rs  registry_test.rs  schema.pg  schema.surql  schema_test.rs  store.rs  store_test.rs  tracker.rs  tracker_test.rs  truncate_test.rs  types.rs  types_test.rs
src/a6s/extract/: extract_test.rs  mod.rs
src/a6s/lang/: mod.rs
src/a6s/queries/: accepts_edges.surql  all_symbols.gq  all_symbols.surql  annotates_type.surql  callees.surql  callers.surql  calls_edges.gq  calls_edges.surql  data_flow.surql  declares_mod.surql  entry_points.surql  explore_module.surql  extends.gq  extends.surql  field_type_edges.surql  file_dependencies.surql  file_imports.gq  file_imports.surql  file_symbols.surql  find_tests_for.surql  has_field.gq  has_field.surql  has_member.gq  has_member.surql  has_method.gq  has_method.surql  hub_symbols.surql  implements.gq  implements.surql  module_map.surql  neighbors.surql  overview.surql  public_api.surql  returns_edges.surql  root_symbols.surql  search_by_pattern.surql  subgraph_edges.surql  symbol_by_id.surql  symbol_children.surql  symbol_search.surql  (+3 more)
src/analysis/: README.md  extractor.rs  integration_test.rs  mod.rs  parser.rs  parser_test.rs  pipeline.rs  pipeline_test.rs  queries.rs  resolver.rs  schema.pg  service.rs  service_test.rs  store.rs  store_test.rs  types.rs  types_test.rs
src/analysis/lang/: analyser.rs  mod.rs
src/analysis/languages/: mod.rs  rust.rs  rust_test.rs
src/analysis/queries/: annotates_type.gq  callees.gq  callers.gq  entry_points.gq  file_symbols.gq  hub_symbols.gq  module_map.gq  overview.gq  public_api.gq  symbol_search.gq  type_hierarchy.gq  uses_type.gq
src/analysis_old/: mod.rs  parser.rs  schema.pg  service_test.rs  types.rs  types_test.rs
src/api/: mod.rs  mod_test.rs  notifier.rs  notifier_test.rs  routes.rs  state.rs  static_assets.rs  static_assets_test.rs  websocket.rs  websocket_test.rs
src/api/handlers/: mod.rs  projects.rs  projects_test.rs  repos.rs  repos_test.rs  system.rs  task_lists.rs  task_lists_test.rs
src/api/v1/: graph.rs  graph_test.rs  jobs.rs  jobs_test.rs  mod.rs  notes.rs  notes_test.rs  notes_test.rs.disabled  projects.rs  projects_test.rs  projects_test.rs.disabled  repos.rs  repos_test.rs  repos_test.rs.disabled  skills.rs  skills_test.rs  sync.rs  task_lists.rs  task_lists_test.rs  task_lists_test.rs.disabled  tasks.rs  tasks_test.rs  tasks_test.rs.disabled
src/cache/: mod.rs
src/cli/: api_client.rs  api_client_test.rs  error.rs  mod.rs  utils.rs  utils_test.rs
src/cli/commands/: analyze.rs  analyze_test.rs  api.rs  api_test.rs  job.rs  mod.rs  note.rs  note_test.rs  project.rs  project_test.rs  repo.rs  repo_test.rs  skill.rs  skill_test.rs  sync.rs  sync_test.rs  task.rs  task_list.rs  task_list_test.rs  task_test.rs  task_test_old.rs
src/common/: command.rs  mod.rs  serde.rs
src/db/: error.rs  error_test.rs  mod.rs  models.rs  models_test.rs  repository.rs  utils.rs
src/db/sqlite/: connection.rs  connection_test.rs  critical_tests.rs  helpers.rs  mod.rs  note.rs  note.rs.bak  note_test.rs  project.rs  project_test.rs  repo.rs  repo_test.rs  repositories.rs  repositories_test.rs  repositories_test.rs.disabled  skill.rs  skill_test.rs  sync.rs  sync_test.rs  task.rs  task_list.rs  task_list_test.rs  task_test.rs  transition_log.rs  transition_log_test.rs
src/frontend/: app.rs  breadcrumb_state.rs  main.rs  mermaid.rs  theme.rs  utils.rs  websocket.rs
src/frontend/api/: mod.rs
src/frontend/assets/: index.html  input.css  tailwind.config.js
src/frontend/components/: mod.rs  note_components.rs  pill_toggle.rs  repo_components.rs  search_input.rs  skill_components.rs  sort_controls.rs  task_components.rs  theme_switcher.rs  ui_components.rs
src/frontend/hooks/: mod.rs  url_utils.rs  use_pagination.rs  use_search.rs  use_sort.rs
src/frontend/models/: mod.rs
src/frontend/pages/: home.rs  mod.rs  note_detail.rs  notes.rs  project_detail.rs  project_notes.rs  projects.rs  repo_detail.rs  repos.rs  skills.rs  task_list_detail.rs  tasks.rs
src/frontend/public/: graph-bridge.js  index.html  mermaid-bridge.js
src/frontend/tailwind/: config.js  input.css
src/jobs/: executor.rs  executor_test.rs  handler.rs  handler_test.rs  handlers.rs  handlers_test.rs  integration_test.rs  job.rs  job_test.rs  job_trait.rs  mod.rs  queue.rs  queue_test.rs  registry.rs  registry_test.rs
src/mcp/: mod.rs  server.rs  server_test.rs  service.rs  service_test.rs
src/mcp/tools/: code_analysis.rs  code_analysis_test.rs  code_query.rs  code_query_test.rs  mod.rs  notes.rs  notes_test.rs  projects.rs  projects_test.rs  repos.rs  repos_test.rs  skills.rs  skills_test.rs  sync.rs  sync_test.rs  task_lists.rs  task_lists_test.rs  (+2 more)
src/skills/: cache.rs  cache_test.rs  import.rs  mod.rs  parser.rs  scanner.rs  source.rs
src/sync/: export.rs  export_test.rs  git.rs  git_test.rs  import.rs  import_test.rs  jsonl.rs  jsonl_test.rs  manager.rs  manager_test.rs  mod.rs  paths.rs  paths_test.rs
(+142 files in other folders)
