[package]
name = "context"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Christian Kemper"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "c5t"
path = "src/bin/cli.rs"
required-features = ["backend"]

[[bin]]
name = "c5t-api"
path = "src/bin/api.rs"
required-features = ["backend"]

[[bin]]
name = "c5t-frontend"
path = "src/frontend/main.rs"
required-features = ["frontend"]

[features]
default = ["backend"]
backend = [
  "dep:axum",
  "dep:chrono",
  "dep:clap",
  "dep:miette",
  "dep:reqwest",
  "dep:rmcp",
  "dep:sqlx",
  "dep:tabled",
  "dep:tokio",
  "dep:tokio-util",
  "dep:tower-http",
  "dep:tracing",
  "dep:tracing-subscriber",
  "dep:utoipa",
  "dep:utoipa-axum",
  "dep:utoipa-scalar",
]
frontend = [
  "dep:leptos",
  "dep:leptos_router",
  "dep:leptos_meta",
  "dep:console_error_panic_hook",
  "dep:wasm-bindgen",
  "dep:gloo-net",
  "dep:gloo-storage",
  "dep:web-sys",
  "dep:pulldown-cmark",
]

[dependencies]
# Shared dependencies (always included)
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
thiserror = "2.0"

# Backend dependencies (only when 'backend' feature enabled)
axum = { version = "0.8.8", optional = true }
chrono = { version = "0.4", optional = true }
clap = { version = "4.5.53", features = ["derive"], optional = true }
miette = { version = "7.5", features = ["fancy"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
rmcp = { version = "0.12", features = ["server", "transport-streamable-http-server"], optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "json", "chrono"], optional = true }
tabled = { version = "0.20", features = ["derive"], optional = true }
tokio = { version = "1.48.0", features = ["full"], optional = true }
tokio-util = { version = "0.7", optional = true }
tower-http = { version = "0.6.8", features = ["trace", "fs"], optional = true }
tracing = { version = "0.1.44", optional = true }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"], optional = true }
utoipa = { version = "5", features = ["axum_extras"], optional = true }
utoipa-axum = { version = "0.2", optional = true }
utoipa-scalar = { version = "0.3", features = ["axum"], optional = true }

# Frontend dependencies (only when 'frontend' feature enabled)
leptos = { version = "0.7", features = ["csr"], optional = true }
leptos_router = { version = "0.7", optional = true }
leptos_meta = { version = "0.7", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
gloo-net = { version = "0.6", features = ["http", "json"], optional = true }
gloo-storage = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlElement"], optional = true }
pulldown-cmark = { version = "0.12", optional = true }

[dev-dependencies]
tempfile = "3.20"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
mockall = "0.13.1"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit for better optimization
panic = "abort"     # Smaller binary, no unwinding
strip = true        # Strip symbols
