[[bin]]
name = "c5t"
path = "src/bin/cli.rs"
required-features = ["backend"]

[[bin]]
name = "c5t-frontend"
path = "src/frontend/main.rs"
required-features = ["frontend"]
test = false

[package]
name = "context"
version = "0.5.1"
edition = "2024"
license = "GPL-2.0"
authors = ["Christian Kemper"]

[lib]
path = "src/lib.rs"

[features]
default = ["backend"]
backend = [
    "dep:axum",
    "dep:chrono",
    "dep:clap",
    "dep:futures-util",
    "dep:miette",
    "dep:mime_guess",
    "dep:reqwest",
    "dep:rmcp",
    "dep:rust-embed",
    "dep:rustls",
    "dep:rustls-platform-verifier",
    "dep:sqlx",
    "dep:tabled",
    "dep:tokio",
    "dep:tokio-util",
    "dep:tower-http",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:utoipa",
    "dep:utoipa-axum",
    "dep:utoipa-scalar",
    "dep:webpki-root-certs",
]
frontend = [
    "dep:leptos",
    "dep:leptos_router",
    "dep:leptos_meta",
    "dep:leptos-use",
    "dep:codee",
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
    "dep:gloo-net",
    "dep:gloo-storage",
    "dep:web-sys",
    "dep:pulldown-cmark",
    "dep:thaw",
]

[dependencies]
base64 = "0.22.1"
serde_json = "1.0.149"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2.0.18"

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[dependencies.axum]
version = "0.8.8"
features = ["ws"]
optional = true

[dependencies.chrono]
version = "0.4.43"
optional = true

[dependencies.clap]
version = "4.5.58"
features = ["derive"]
optional = true

[dependencies.miette]
version = "7.6.0"
features = ["fancy"]
optional = true

[dependencies.mime_guess]
version = "2.0.5"
optional = true

[dependencies.reqwest]
version = "0.13.2"
default-features = false
features = [
    "json",
    "rustls-no-provider",
    "query",
]
optional = true

[dependencies.rust-embed]
version = "8.11.0"
features = [
    "axum",
    "compression",
    "include-exclude",
]
optional = true

[dependencies.rustls]
version = "0.23.36"
default-features = false
features = [
    "ring",
    "std",
    "tls12",
]
optional = true

[dependencies.rustls-platform-verifier]
version = "0.6.2"
optional = true

[dependencies.webpki-root-certs]
version = "1.0.6"
optional = true

[dependencies.rmcp]
version = "0.14.0"
features = [
    "server",
    "transport-streamable-http-server",
]
optional = true

[dependencies.sqlx]
version = "0.8.6"
features = [
    "runtime-tokio",
    "sqlite",
    "migrate",
    "json",
    "chrono",
]
optional = true

[dependencies.tabled]
version = "0.20.0"
features = ["derive"]
optional = true

[dependencies.tokio]
version = "1.49.0"
features = ["full"]
optional = true

[dependencies.tokio-util]
version = "0.7.18"
optional = true

[dependencies.futures-util]
version = "0.3.32"
optional = true

[dependencies.tower-http]
version = "0.6.8"
features = [
    "trace",
    "fs",
]
optional = true

[dependencies.tracing]
version = "0.1.44"
optional = true

[dependencies.tracing-subscriber]
version = "0.3.22"
features = ["env-filter"]
optional = true

[dependencies.utoipa]
version = "5.4.0"
features = ["axum_extras"]
optional = true

[dependencies.utoipa-axum]
version = "0.2.0"
optional = true

[dependencies.utoipa-scalar]
version = "0.3.0"
features = ["axum"]
optional = true

[dependencies.leptos]
version = "0.8.15"
features = ["csr"]
optional = true

[dependencies.leptos_router]
version = "0.8.11"
optional = true

[dependencies.leptos_meta]
version = "0.8.5"
optional = true

[dependencies.console_error_panic_hook]
version = "0.1.7"
optional = true

[dependencies.wasm-bindgen]
version = "0.2.106"
optional = true

[dependencies.gloo-net]
version = "0.6.0"
features = [
    "http",
    "json",
]
optional = true

[dependencies.gloo-storage]
version = "0.3.0"
optional = true

[dependencies.web-sys]
version = "0.3.83"
features = [
    "Window",
    "Document",
    "HtmlElement",
    "Location",
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "ErrorEvent",
]
optional = true

[dependencies.pulldown-cmark]
version = "0.13.0"
optional = true

[dependencies.thaw]
version = "0.5.0-beta"
features = ["csr"]
optional = true

[dependencies.leptos-use]
version = "0.18"
features = ["use_websocket"]
optional = true

[dependencies.codee]
version = "0.3.5"
features = ["json_serde"]
optional = true

[dev-dependencies]
tempfile = "3.24.0"
http-body-util = "0.1.3"
mockall = "0.14.0"
serial_test = "3.3.1"

[dev-dependencies.tower]
version = "0.5.3"
features = ["util"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
